--- a/src/main/webapp/4_23_HTML5SemanticElements.html
+++ b/src/main/webapp/4_23_HTML5SemanticElements.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Bookmarks</title>
+<title>Insert title here</title>
+<style> header,nav,table,th,td,form{border:2px solid red}</style>
 </head>
 <body>
+<header>
 <h1 id="top">PAGE BRAND</h1>
+</header> <!-- added a header  -->
+<nav>
+<a href="HomePage_CreateANAVBar.html">Home</a> ||
+<a href="Portfolio_CreateANAVBar.html">Portfolio</a>||
+<a href="About_CreateANAVBar.html">About</a>||
+<a href="Contact_CreateANAVBar.html">Contact</a>||
+<a href="https://www.linkedin.com/in/bhavey-malhotra-5a43a3144" target="_blank">Linkedin</a><br>
+<!-- target="_blank" makes it go to open a new page --> 
 There is cool stuff below <a href="#coolstuff">click me</a> to know
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -15,5 +25,8 @@ There is cool stuff below <a href="#coolstuff">click me</a> to know
 <h4 id="coolstuff">ice is cool</h4>
 <!-- id="coolstuff" will help us to link/bookmark to a part of the page    -->
 <h4 id=""> lets go to top , <a href="#top">click me</a> to see the magic </h4>
+
+
+</nav>
 </body>
 </html>
